# zs

./: .envrc  .gitignore  README.md  dbt_project.yml  init.sql  profiles.yml  pyproject.toml  static_index.html
.streamlit/: secrets_template.toml
analytics/models/: _sources.yml
analytics/models/core/: obt__riders.yml
analytics/models/docs/: descriptions.md
analytics/models/staging/: stg__riders.sql  stg__riders.yml
dbt_zs/macros/: is_false.sql  max_value.sql  no_riders_over_100kg_macro.sql  no_riders_over_120kg.sql  rider_is_over_100kg.sql
dbt_zs/models/: _groups.yml  _sources.yml  sources.yml
dbt_zs/models/core/: obt__riders.yml
dbt_zs/models/docs/: another_page.md  descriptions.md  overview.md  zwiftscout.md
dbt_zs/models/staging/: stg__riders.sql  stg__riders.yml
dbt_zs/tests/: no_riders_over_100kg_test.sql  no_riders_under_100kg.sql
dlt/: zwiftracing.py
ui/: app.py
zwift_scout_dbt_pipeline/models/core/: obt__riders.sql
zwift_scout_dbt_pipeline/models/staging/: stg__riders.sql
