[tool.poetry]
name = "zs"
version = "0.1.0"
description = ""
authors = ["robgriffin247 <robgriffin247@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pyarrow = "^21.0.0"
polars = "^1.33.1"
streamlit = "^1.49.1"
duckdb = "^1.4.1"
dlt = "^1.17.1"
httpx = "^0.28.1"
dbt = "^1.0.0.40.7"
dbt-duckdb = "^1.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


